# nanoMITK

./: .gitignore  MITKConfig.cmake.in  SuperBuild.cmake  mitkConfig.h.in
Applications/Workbench/: target_libraries.cmake
CMakeExternals/: CTK.cmake  CppMicroServices.cmake  ExternalProjectList.cmake  ITKCommon.cmake  KWSys.cmake  OpenMesh.cmake  PCRE.cmake  SWIG.cmake  VNL.cmake  lz4.cmake  nlohmann_json.cmake
Modules/: CMakeLists.txt  ModuleList.cmake
Modules/AppUtil/: CMakeLists.txt
Modules/AppUtil/src/: mitkBaseApplication.cpp
Modules/Core/: CMakeLists.txt  files.cmake
Modules/Core/include/: mitkImageAccessByItk.h  mitkImageCaster.h
Modules/Core/src/: mitkCoreActivator.cpp
Modules/Core/src/DataManagement/: mitkBaseGeometry.cpp
Modules/Core/src/IO/: mitkCustomMimeType.cpp  mitkLog.cpp  mitkMimeTypeProvider.cpp  mitkStandardFileLocations.cpp
Modules/Core/test/: mitkTinyXMLTest.cpp
Plugins/: PluginList.cmake
Utilities/: CMakeLists.txt
